k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appstore
spec:
  selector:
    app: appstore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
