k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: appstore
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appstore
            port:
              number: 80
